[gd_scene load_steps=14 format=2]

[ext_resource path="res://actors/player/PlayerPlatformActor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Command.gd" type="Script" id=2]
[ext_resource path="res://actors/physics/Stop.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/player/PlayerAction.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/player/ActionBuffer.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/player/CharacterAttacksContainer.gd" type="Script" id=6]
[ext_resource path="res://actors/combat/AttackContainer.gd" type="Script" id=7]
[ext_resource path="res://actors/combat/Attack.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/combat/HitBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/player/PlayerHit.tres" type="Resource" id=10]
[ext_resource path="res://utility/Geometry2D.gd" type="Script" id=11]
[ext_resource path="res://actors/combat/HitLag.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="PlayerCombatActor" instance=ExtResource( 1 )]

[node name="StateMachine" parent="." index="1"]
actor_path = NodePath("..")

[node name="IdleState" parent="StateMachine" index="0"]
editor/display_folded = true

[node name="Jump" parent="StateMachine/IdleState" index="1"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/IdleState" index="2"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/IdleState" index="5"]
script = ExtResource( 2 )

[node name="SingleJumpFallState" parent="StateMachine" index="1"]
editor/display_folded = true

[node name="Gravity" parent="StateMachine/SingleJumpFallState" index="4"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/SingleJumpFallState" index="6"]
script = ExtResource( 2 )

[node name="DoubleJumpFallState" parent="StateMachine" index="2"]
editor/display_folded = true

[node name="Gravity" parent="StateMachine/DoubleJumpFallState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/DoubleJumpFallState" index="4"]
script = ExtResource( 2 )

[node name="WalkState" parent="StateMachine" index="3"]
editor/display_folded = true

[node name="Gravity" parent="StateMachine/WalkState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/WalkState" index="6"]
script = ExtResource( 2 )

[node name="Stop" parent="StateMachine/WalkState/Attack" index="0" instance=ExtResource( 3 )]
actor_path = NodePath("../../../..")

[node name="JumpState" parent="StateMachine" index="4"]
editor/display_folded = true

[node name="Jump" parent="StateMachine/JumpState" index="0"]
actor_path = NodePath("..")

[node name="Fall" parent="StateMachine/JumpState" index="1"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/JumpState" index="4"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/JumpState" index="6"]
script = ExtResource( 2 )

[node name="Gravity" parent="StateMachine/SecondJumpState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor/StateMachine/SecondJumpState")

[node name="Attack" type="Node" parent="StateMachine/SecondJumpState" index="4"]
script = ExtResource( 2 )

[node name="Stop" parent="StateMachine/DashState" index="0"]
actor_path = NodePath("..")

[node name="Attack" type="Node" parent="StateMachine/DashState" index="4"]
script = ExtResource( 2 )

[node name="Stop" parent="StateMachine/DashFallState" index="0"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/DashFallState" index="1"]
actor_path = NodePath("../../../../PlayerCombatActor/StateMachine/DashFallState")

[node name="Attack" type="Node" parent="StateMachine/DashFallState" index="4"]
script = ExtResource( 2 )

[node name="Fall" parent="StateMachine/DashJumpState" index="0"]
actor_path = NodePath("..")

[node name="Stop" parent="StateMachine/DashJumpState" index="1"]
actor_path = NodePath("..")

[node name="Move" parent="StateMachine/DashJumpState" index="2"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/DashJumpState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Attack" type="Node" parent="StateMachine/DashJumpState" index="4"]
script = ExtResource( 2 )

[node name="Stop" parent="StateMachine/DashJumpFallState" index="0"]
actor_path = NodePath("..")

[node name="Move" parent="StateMachine/DashJumpFallState" index="2"]
actor_path = NodePath("..")

[node name="Fall" parent="StateMachine/DashJumpFallState" index="3"]
actor_path = NodePath("..")

[node name="Attack" type="Node" parent="StateMachine/DashJumpFallState" index="4"]
script = ExtResource( 2 )

[node name="Controls" parent="." index="2"]
editor/display_folded = true

[node name="AttackAction" parent="Controls" index="6" instance=ExtResource( 4 )]
action = "attack"

[node name="DefendAction" parent="Controls" index="7" instance=ExtResource( 4 )]
action = "defend"

[node name="ActionBuffer" parent="Controls" index="8" instance=ExtResource( 5 )]

[node name="Attacks" type="Node2D" parent="." index="3"]
script = ExtResource( 6 )
default_attack_path = NodePath("IdleAttacks")

[node name="IdleAttacks" type="Node2D" parent="Attacks" index="0"]
editor/display_folded = true
script = ExtResource( 7 )
default_attack_path = NodePath("AttackRight")

[node name="AttackRight" parent="Attacks/IdleAttacks" index="0" instance=ExtResource( 8 )]
position = Vector2( 110, -64 )

[node name="HitBox" parent="Attacks/IdleAttacks/AttackRight" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/IdleAttacks/AttackRight/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 0.180392, 0.384314, 1, 0.560784 )

[node name="HitLag" parent="Attacks/IdleAttacks/AttackRight" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="AttackLeft" parent="Attacks/IdleAttacks" index="1" instance=ExtResource( 8 )]
position = Vector2( -110, -64 )

[node name="HitBox" parent="Attacks/IdleAttacks/AttackLeft" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/IdleAttacks/AttackLeft/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 0.180392, 0.384314, 1, 0.560784 )

[node name="HitLag" parent="Attacks/IdleAttacks/AttackLeft" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="WalkAttacks" type="Node2D" parent="Attacks" index="1"]
editor/display_folded = true
script = ExtResource( 7 )
default_attack_path = NodePath("../WalkAttacks/AttackRight")

[node name="AttackRight" parent="Attacks/WalkAttacks" index="0" instance=ExtResource( 8 )]
position = Vector2( 110, -64 )

[node name="HitBox" parent="Attacks/WalkAttacks/AttackRight" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/WalkAttacks/AttackRight/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 1, 0.180392, 0.756863, 0.560784 )

[node name="HitLag" parent="Attacks/WalkAttacks/AttackRight" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="AttackLeft" parent="Attacks/WalkAttacks" index="1" instance=ExtResource( 8 )]
position = Vector2( -110, -64 )

[node name="HitBox" parent="Attacks/WalkAttacks/AttackLeft" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/WalkAttacks/AttackLeft/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 1, 0.180392, 0.756863, 0.560784 )

[node name="HitLag" parent="Attacks/WalkAttacks/AttackLeft" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="JumpAttacks" type="Node2D" parent="Attacks" index="2"]
editor/display_folded = true
script = ExtResource( 7 )
default_attack_path = NodePath("../JumpAttacks/AttackRight")

[node name="AttackLeft" parent="Attacks/JumpAttacks" index="0" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( -110, -64 )

[node name="HitBox" parent="Attacks/JumpAttacks/AttackLeft" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/JumpAttacks/AttackLeft/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 0.207843, 1, 0.180392, 0.560784 )

[node name="HitLag" parent="Attacks/JumpAttacks/AttackLeft" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="AttackRight" parent="Attacks/JumpAttacks" index="1" instance=ExtResource( 8 )]
editor/display_folded = true
position = Vector2( 110, -64 )

[node name="HitBox" parent="Attacks/JumpAttacks/AttackRight" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/JumpAttacks/AttackRight/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 0.207843, 1, 0.180392, 0.560784 )

[node name="HitLag" parent="Attacks/JumpAttacks/AttackRight" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="DashAttacks" type="Node2D" parent="Attacks" index="3"]
editor/display_folded = true
script = ExtResource( 7 )
default_attack_path = NodePath("../JumpAttacks/AttackRight")

[node name="AttackLeft" parent="Attacks/DashAttacks" index="0" instance=ExtResource( 8 )]
position = Vector2( -110, -64 )

[node name="HitBox" parent="Attacks/DashAttacks/AttackLeft" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/DashAttacks/AttackLeft/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 1, 0.909804, 0.180392, 0.560784 )

[node name="HitLag" parent="Attacks/DashAttacks/AttackLeft" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")

[node name="AttackRight" parent="Attacks/DashAttacks" index="1" instance=ExtResource( 8 )]
position = Vector2( 110, -64 )

[node name="HitBox" parent="Attacks/DashAttacks/AttackRight" index="2" instance=ExtResource( 9 )]
hit = ExtResource( 10 )

[node name="Geometry2D" type="CollisionShape2D" parent="Attacks/DashAttacks/AttackRight/HitBox" index="0"]
shape = SubResource( 1 )
script = ExtResource( 11 )
color = Color( 1, 0.909804, 0.180392, 0.560784 )

[node name="HitLag" parent="Attacks/DashAttacks/AttackRight" index="3" instance=ExtResource( 12 )]
actor_path = NodePath("../../../..")
[connection signal="entered" from="StateMachine/IdleState" to="Attacks" method="set_current" binds= [ "IdleAttacks" ]]
[connection signal="finished" from="StateMachine/IdleState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/IdleState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/SingleJumpFallState" to="Attacks" method="set_current" binds= [ "JumpAttacks" ]]
[connection signal="finished" from="StateMachine/SingleJumpFallState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/SingleJumpFallState/Attack" to="Attacks" method="execute"]
[connection signal="finished" from="StateMachine/DoubleJumpFallState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/DoubleJumpFallState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/WalkState" to="Attacks" method="set_current" binds= [ "WalkAttacks" ]]
[connection signal="finished" from="StateMachine/WalkState/Attack" to="Controls/RightAction" method="is_holding"]
[connection signal="finished" from="StateMachine/WalkState/Attack" to="Controls/LeftAction" method="is_holding"]
[connection signal="finished" from="StateMachine/WalkState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/WalkState/Attack" to="StateMachine/WalkState/Attack/Stop" method="execute"]
[connection signal="started" from="StateMachine/WalkState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/JumpState" to="Attacks" method="set_current" binds= [ "JumpAttacks" ]]
[connection signal="finished" from="StateMachine/JumpState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/JumpState/Attack" to="Attacks" method="execute"]
[connection signal="finished" from="StateMachine/SecondJumpState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/SecondJumpState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/DashState" to="Attacks" method="set_current" binds= [ "DashAttacks" ]]
[connection signal="finished" from="StateMachine/DashState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/DashState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/DashFallState" to="Attacks" method="set_current" binds= [ "JumpAttacks" ]]
[connection signal="finished" from="StateMachine/DashFallState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/DashFallState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/DashJumpState" to="Attacks" method="set_current" binds= [ "JumpAttacks" ]]
[connection signal="finished" from="StateMachine/DashJumpState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/DashJumpState/Attack" to="Attacks" method="execute"]
[connection signal="entered" from="StateMachine/DashJumpFallState" to="Attacks" method="set_current" binds= [ "JumpAttacks" ]]
[connection signal="finished" from="StateMachine/DashJumpFallState/Attack" to="Attacks" method="cancel"]
[connection signal="started" from="StateMachine/DashJumpFallState/Attack" to="Attacks" method="execute"]
[connection signal="pressed" from="Controls/LeftAction" to="Attacks" method="set_attack_direction" binds= [ Vector2( -1, 0 ) ]]
[connection signal="pressed" from="Controls/RightAction" to="Attacks" method="set_attack_direction" binds= [ Vector2( 1, 0 ) ]]
[connection signal="pressed" from="Controls/AttackAction" to="StateMachine" method="execute" binds= [ "Attack" ]]
[connection signal="released" from="Controls/AttackAction" to="StateMachine" method="cancel" binds= [ "Attack" ]]
[connection signal="finished" from="Attacks/IdleAttacks/AttackRight" to="Attacks/IdleAttacks/AttackRight/HitBox" method="disable"]
[connection signal="started" from="Attacks/IdleAttacks/AttackRight" to="Attacks/IdleAttacks/AttackRight/HitBox" method="enable"]
[connection signal="landed" from="Attacks/IdleAttacks/AttackRight/HitBox" to="Attacks/IdleAttacks/AttackRight/HitLag" method="start"]
[connection signal="finished" from="Attacks/IdleAttacks/AttackLeft" to="Attacks/IdleAttacks/AttackLeft/HitBox" method="disable"]
[connection signal="started" from="Attacks/IdleAttacks/AttackLeft" to="Attacks/IdleAttacks/AttackLeft/HitBox" method="enable"]
[connection signal="landed" from="Attacks/IdleAttacks/AttackLeft/HitBox" to="Attacks/IdleAttacks/AttackLeft/HitLag" method="start"]
[connection signal="finished" from="Attacks/WalkAttacks/AttackRight" to="Attacks/WalkAttacks/AttackRight/HitBox" method="disable"]
[connection signal="started" from="Attacks/WalkAttacks/AttackRight" to="Attacks/WalkAttacks/AttackRight/HitBox" method="enable"]
[connection signal="landed" from="Attacks/WalkAttacks/AttackRight/HitBox" to="Attacks/WalkAttacks/AttackRight/HitLag" method="start"]
[connection signal="finished" from="Attacks/WalkAttacks/AttackLeft" to="Attacks/WalkAttacks/AttackLeft/HitBox" method="disable"]
[connection signal="started" from="Attacks/WalkAttacks/AttackLeft" to="Attacks/WalkAttacks/AttackLeft/HitBox" method="enable"]
[connection signal="landed" from="Attacks/WalkAttacks/AttackLeft/HitBox" to="Attacks/WalkAttacks/AttackLeft/HitLag" method="start"]
[connection signal="finished" from="Attacks/JumpAttacks/AttackLeft" to="Attacks/JumpAttacks/AttackLeft/HitBox" method="disable"]
[connection signal="started" from="Attacks/JumpAttacks/AttackLeft" to="Attacks/JumpAttacks/AttackLeft/HitBox" method="enable"]
[connection signal="landed" from="Attacks/JumpAttacks/AttackLeft/HitBox" to="Attacks/JumpAttacks/AttackLeft/HitLag" method="start"]
[connection signal="finished" from="Attacks/JumpAttacks/AttackRight" to="Attacks/JumpAttacks/AttackRight/HitBox" method="disable"]
[connection signal="started" from="Attacks/JumpAttacks/AttackRight" to="Attacks/JumpAttacks/AttackRight/HitBox" method="enable"]
[connection signal="landed" from="Attacks/JumpAttacks/AttackRight/HitBox" to="Attacks/JumpAttacks/AttackRight/HitLag" method="start"]
[connection signal="finished" from="Attacks/DashAttacks/AttackLeft" to="Attacks/DashAttacks/AttackLeft/HitBox" method="disable"]
[connection signal="started" from="Attacks/DashAttacks/AttackLeft" to="Attacks/DashAttacks/AttackLeft/HitBox" method="enable"]
[connection signal="landed" from="Attacks/DashAttacks/AttackLeft/HitBox" to="Attacks/DashAttacks/AttackLeft/HitLag" method="start"]
[connection signal="finished" from="Attacks/DashAttacks/AttackRight" to="Attacks/DashAttacks/AttackRight/HitBox" method="disable"]
[connection signal="started" from="Attacks/DashAttacks/AttackRight" to="Attacks/DashAttacks/AttackRight/HitBox" method="enable"]
[connection signal="landed" from="Attacks/DashAttacks/AttackRight/HitBox" to="Attacks/DashAttacks/AttackRight/HitLag" method="start"]
